Added empty activity search, to be implemented

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name="handwriting" >
         </activity>
+        <activity android:name="Search"></activity>
     </application>
 
 </manifest>
